Bug 342803 - kmail tray icon tiny with QHD display
Summary: kmail tray icon tiny with QHD display
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.14.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-13 17:18 UTC by Martin Zbořil
Modified: 2015-07-07 21:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (7.31 KB, image/jpeg)
2015-01-13 18:27 UTC, Martin Zbořil
Details
no new mail - icon is big (6.78 KB, image/jpeg)
2015-01-14 14:12 UTC, Martin Zbořil
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Zbořil 2015-01-13 17:18:15 UTC
the tray icon is too small on QHD screen. 

Reproducible: Always

Steps to Reproduce:
1. buy a new monitor with 3860*2100 or so
2. try to spot the icon
3. dont see the icon as it is too small

Actual Results:  
number of mails is not readable

Expected Results:  
being able to use my favorite mail client in my favorite OS with my new high-high definition screen.
Comment 1 Laurent Montel 2015-01-13 18:22:03 UTC
Size is the same for all tray icon ?
Comment 2 Martin Zbořil 2015-01-13 18:27:09 UTC
Created attachment 90392 [details]
screenshot
Comment 3 Laurent Montel 2015-01-14 06:37:04 UTC
Ok I see.
I just need a test cool you make read all emails and look at size in trayicon when there is not number on it please ?
is it the same or not ?
Comment 4 Martin Zbořil 2015-01-14 14:12:52 UTC
Created attachment 90402 [details]
no new mail - icon is big

if all mails red, icon is big as it should
Comment 5 Laurent Montel 2015-01-14 14:50:43 UTC
Ok now I know why there is this bug.
Thanks for info . I will try to fix it.
Comment 6 Laurent Montel 2015-01-14 22:07:41 UTC
Git commit 681a9be902d7596492696e6cbbd3e47212e9bbb6 by Montel Laurent.
Committed on 14/01/2015 at 22:07.
Pushed by mlaurent into branch 'KDE/4.14'.

Try to fix Bug 342803 - kmail tray icon tiny with QHD display

M  +4    -1    kmail/kmsystemtray.cpp

http://commits.kde.org/kdepim/681a9be902d7596492696e6cbbd3e47212e9bbb6
Comment 7 Laurent Montel 2015-01-14 22:08:02 UTC
I can't test it but I hope it's ok
Comment 8 Martin Zbořil 2015-07-07 21:12:50 UTC
thanks again, works well