Try to fix Bug 342803 - kmail tray icon tiny with QHD display

BUG: 342803